--- a/src/Components/Layouts/MainLayout/Private/style.css
+++ b/src/Components/Layouts/MainLayout/Private/style.css
@@ -3645,7 +3645,7 @@ ul.uk-nav-sub {
 /* Container
  ========================================================================== */
 .uk-navbar-container:not(.uk-navbar-transparent) {
-  background: #212121; }
+  background: #f8f8f8; }
 
 /*
  * Remove pseudo elements created by micro clearfix as precaution (if Container component is used)
@@ -9775,3 +9775,536 @@ a.text-error:focus, a.text-error:hover {
     padding: 3px 4px;
     text-overflow: ellipsis;
     white-space: nowrap; }
+
+.btn {
+  transition: all .2s ease;
+  appearance: none;
+  background: #fff;
+  border: 0.05rem solid #5755d9;
+  border-radius: 0.1rem;
+  color: #5755d9;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.8rem;
+  height: 1.8rem;
+  line-height: 1rem;
+  outline: none;
+  padding: 0.35rem 0.4rem;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap; }
+  .btn:focus {
+    box-shadow: 0 0 0 0.1rem rgba(87, 85, 217, 0.2); }
+  .btn:focus, .btn:hover {
+    background: #f1f1fc;
+    border-color: #4b48d6;
+    text-decoration: none; }
+  .btn:active, .btn.active {
+    background: #4b48d6;
+    border-color: #3634d2;
+    color: #fff;
+    text-decoration: none; }
+    .btn:active.loading::after, .btn.active.loading::after {
+      border-bottom-color: #fff;
+      border-left-color: #fff; }
+  .btn[disabled], .btn:disabled, .btn.disabled {
+    cursor: default;
+    opacity: .5;
+    pointer-events: none; }
+  .btn.btn-primary {
+    background: #5755d9;
+    border-color: #4b48d6;
+    color: #fff; }
+    .btn.btn-primary:focus, .btn.btn-primary:hover {
+      background: #4240d4;
+      border-color: #3634d2;
+      color: #fff; }
+    .btn.btn-primary:active, .btn.btn-primary.active {
+      background: #3a38d2;
+      border-color: #302ecd;
+      color: #fff; }
+    .btn.btn-primary.loading::after {
+      border-bottom-color: #fff;
+      border-left-color: #fff; }
+  .btn.btn-success {
+    background: #32b643;
+    border-color: #2faa3f;
+    color: #fff; }
+    .btn.btn-success:focus {
+      box-shadow: 0 0 0 0.1rem rgba(50, 182, 67, 0.2); }
+    .btn.btn-success:focus, .btn.btn-success:hover {
+      background: #30ae40;
+      border-color: #2da23c;
+      color: #fff; }
+    .btn.btn-success:active, .btn.btn-success.active {
+      background: #2a9a39;
+      border-color: #278e34;
+      color: #fff; }
+    .btn.btn-success.loading::after {
+      border-bottom-color: #fff;
+      border-left-color: #fff; }
+  .btn.btn-error {
+    background: #e85600;
+    border-color: #d95000;
+    color: #fff; }
+    .btn.btn-error:focus {
+      box-shadow: 0 0 0 0.1rem rgba(232, 86, 0, 0.2); }
+    .btn.btn-error:focus, .btn.btn-error:hover {
+      background: #de5200;
+      border-color: #cf4d00;
+      color: #fff; }
+    .btn.btn-error:active, .btn.btn-error.active {
+      background: #c44900;
+      border-color: #b54300;
+      color: #fff; }
+    .btn.btn-error.loading::after {
+      border-bottom-color: #fff;
+      border-left-color: #fff; }
+  .btn.btn-link {
+    background: transparent;
+    border-color: transparent;
+    color: #5755d9; }
+    .btn.btn-link:focus, .btn.btn-link:hover, .btn.btn-link:active, .btn.btn-link.active {
+      color: #4240d4; }
+  .btn.btn-sm {
+    font-size: 0.7rem;
+    height: 1.4rem;
+    padding: 0.15rem 0.3rem; }
+  .btn.btn-lg {
+    font-size: 0.9rem;
+    height: 2rem;
+    padding: 0.45rem 0.6rem; }
+  .btn.btn-block {
+    display: block;
+    width: 100%; }
+  .btn.btn-action {
+    width: 1.8rem;
+    padding-left: 0;
+    padding-right: 0; }
+    .btn.btn-action.btn-sm {
+      width: 1.4rem; }
+    .btn.btn-action.btn-lg {
+      width: 2rem; }
+  .btn.btn-clear {
+    background: transparent;
+    border: 0;
+    color: currentColor;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    margin-left: 0.2rem;
+    margin-right: -2px;
+    opacity: 1;
+    padding: 0;
+    text-decoration: none;
+    width: 0.8rem; }
+    .btn.btn-clear:hover {
+      opacity: .95; }
+    .btn.btn-clear::before {
+      content: "\2715"; }
+
+.btn-group {
+  display: inline-flex;
+  flex-wrap: wrap; }
+  .btn-group .btn {
+    flex: 1 0 auto; }
+    .btn-group .btn:first-child:not(:last-child) {
+      border-bottom-right-radius: 0;
+      border-top-right-radius: 0; }
+    .btn-group .btn:not(:first-child):not(:last-child) {
+      border-radius: 0;
+      margin-left: -0.05rem; }
+    .btn-group .btn:last-child:not(:first-child) {
+      border-bottom-left-radius: 0;
+      border-top-left-radius: 0;
+      margin-left: -0.05rem; }
+    .btn-group .btn:focus, .btn-group .btn:hover, .btn-group .btn:active, .btn-group .btn.active {
+      z-index: 1; }
+  .btn-group.btn-group-block {
+    display: flex; }
+    .btn-group.btn-group-block .btn {
+      flex: 1 0 0; }
+
+.form-group:not(:last-child) {
+  margin-bottom: 0.4rem; }
+
+fieldset {
+  margin-bottom: 0.8rem; }
+
+legend {
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin-bottom: 0.8rem; }
+
+.form-label {
+  display: block;
+  line-height: 1rem;
+  padding: 0.4rem 0; }
+  .form-label.label-sm {
+    font-size: 0.7rem;
+    padding: 0.2rem 0; }
+  .form-label.label-lg {
+    font-size: 0.9rem;
+    padding: 0.5rem 0; }
+
+.form-input {
+  transition: all .2s ease;
+  appearance: none;
+  background: #fff;
+  background-image: none;
+  border: 0.05rem solid #caced7;
+  border-radius: 0.1rem;
+  color: #50596c;
+  display: block;
+  font-size: 0.8rem;
+  height: 1.8rem;
+  line-height: 1rem;
+  max-width: 100%;
+  outline: none;
+  padding: 0.35rem 0.4rem;
+  position: relative;
+  width: 100%; }
+  .form-input:focus {
+    box-shadow: 0 0 0 0.1rem rgba(87, 85, 217, 0.2);
+    border-color: #5755d9; }
+  .form-input::placeholder {
+    color: #acb3c2; }
+  .form-input.input-sm {
+    font-size: 0.7rem;
+    height: 1.4rem;
+    padding: 0.15rem 0.3rem; }
+  .form-input.input-lg {
+    font-size: 0.9rem;
+    height: 2rem;
+    padding: 0.45rem 0.6rem; }
+  .form-input.input-inline {
+    display: inline-block;
+    vertical-align: middle;
+    width: auto; }
+  .form-input[type="file"] {
+    height: auto; }
+
+textarea.form-input {
+  height: auto; }
+
+.form-input-hint {
+  color: #acb3c2;
+  font-size: 0.7rem;
+  margin-top: 0.2rem; }
+  .has-success .form-input-hint,
+  .is-success + .form-input-hint {
+    color: #32b643; }
+  .has-error .form-input-hint,
+  .is-error + .form-input-hint {
+    color: #e85600; }
+
+.form-select {
+  appearance: none;
+  border: 0.05rem solid #caced7;
+  border-radius: 0.1rem;
+  color: inherit;
+  font-size: 0.8rem;
+  height: 1.8rem;
+  line-height: 1rem;
+  outline: none;
+  padding: 0.35rem 0.4rem;
+  vertical-align: middle;
+  width: 100%; }
+  .form-select[size], .form-select[multiple] {
+    height: auto; }
+    .form-select[size] option, .form-select[multiple] option {
+      padding: 0.1rem 0.2rem; }
+  .form-select:not([multiple]):not([size]) {
+    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right 0.35rem center/0.4rem 0.5rem;
+    padding-right: 1.2rem; }
+  .form-select:focus {
+    box-shadow: 0 0 0 0.1rem rgba(87, 85, 217, 0.2);
+    border-color: #5755d9; }
+  .form-select::-ms-expand {
+    display: none; }
+  .form-select.select-sm {
+    font-size: 0.7rem;
+    height: 1.4rem;
+    padding: 0.15rem 1.1rem 0.15rem 0.3rem; }
+  .form-select.select-lg {
+    font-size: 0.9rem;
+    height: 2rem;
+    padding: 0.45rem 1.4rem 0.45rem 0.6rem; }
+
+.has-icon-left,
+.has-icon-right {
+  position: relative; }
+  .has-icon-left .form-icon,
+  .has-icon-right .form-icon {
+    height: 0.8rem;
+    margin: 0 0.35rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0.8rem;
+    z-index: 2; }
+
+.has-icon-left .form-icon {
+  left: 0.05rem; }
+
+.has-icon-left .form-input {
+  padding-left: 1.5rem; }
+
+.has-icon-right .form-icon {
+  right: 0.05rem; }
+
+.has-icon-right .form-input {
+  padding-right: 1.5rem; }
+
+.form-checkbox,
+.form-radio,
+.form-switch {
+  display: inline-block;
+  line-height: 1rem;
+  margin: 0.2rem 0;
+  min-height: 1.2rem;
+  padding: 0.2rem 0.4rem 0.2rem 1.2rem;
+  position: relative; }
+  .form-checkbox input,
+  .form-radio input,
+  .form-switch input {
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    position: absolute;
+    width: 1px; }
+    .form-checkbox input:focus + .form-icon,
+    .form-radio input:focus + .form-icon,
+    .form-switch input:focus + .form-icon {
+      box-shadow: 0 0 0 0.1rem rgba(87, 85, 217, 0.2);
+      border-color: #5755d9; }
+    .form-checkbox input:checked + .form-icon,
+    .form-radio input:checked + .form-icon,
+    .form-switch input:checked + .form-icon {
+      background: #5755d9;
+      border-color: #5755d9; }
+  .form-checkbox .form-icon,
+  .form-radio .form-icon,
+  .form-switch .form-icon {
+    transition: all .2s ease;
+    border: 0.05rem solid #caced7;
+    cursor: pointer;
+    display: inline-block;
+    position: absolute; }
+  .form-checkbox.input-sm,
+  .form-radio.input-sm,
+  .form-switch.input-sm {
+    font-size: 0.7rem;
+    margin: 0; }
+  .form-checkbox.input-lg,
+  .form-radio.input-lg,
+  .form-switch.input-lg {
+    font-size: 0.9rem;
+    margin: 0.3rem 0; }
+
+.form-checkbox .form-icon,
+.form-radio .form-icon {
+  background: #fff;
+  height: 0.8rem;
+  left: 0;
+  top: 0.3rem;
+  width: 0.8rem; }
+
+.form-checkbox input:active + .form-icon,
+.form-radio input:active + .form-icon {
+  background: #f0f1f4; }
+
+.form-checkbox .form-icon {
+  border-radius: 0.1rem; }
+
+.form-checkbox input:checked + .form-icon::before {
+  background-clip: padding-box;
+  border: 0.1rem solid #fff;
+  border-left-width: 0;
+  border-top-width: 0;
+  content: "";
+  height: 12px;
+  left: 50%;
+  margin-left: -4px;
+  margin-top: -8px;
+  position: absolute;
+  top: 50%;
+  transform: rotate(45deg);
+  width: 8px; }
+
+.form-checkbox input:indeterminate + .form-icon {
+  background: #5755d9;
+  border-color: #5755d9; }
+  .form-checkbox input:indeterminate + .form-icon::before {
+    background: #fff;
+    content: "";
+    height: 2px;
+    left: 50%;
+    margin-left: -5px;
+    margin-top: -1px;
+    position: absolute;
+    top: 50%;
+    width: 10px; }
+
+.form-radio .form-icon {
+  border-radius: 50%; }
+
+.form-radio input:checked + .form-icon::before {
+  background: #fff;
+  border-radius: 50%;
+  content: "";
+  height: 4px;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 4px; }
+
+.form-switch {
+  padding-left: 2rem; }
+  .form-switch .form-icon {
+    background: #e7e9ed;
+    background-clip: padding-box;
+    border-radius: 0.45rem;
+    height: 0.9rem;
+    left: 0;
+    top: 0.25rem;
+    width: 1.6rem; }
+    .form-switch .form-icon::before {
+      transition: all .2s ease;
+      background: #fff;
+      border-radius: 50%;
+      content: "";
+      display: block;
+      height: 0.8rem;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 0.8rem; }
+  .form-switch input:checked + .form-icon::before {
+    left: 14px; }
+  .form-switch input:active + .form-icon::before {
+    background: #f8f9fa; }
+
+.input-group {
+  display: flex; }
+  .input-group .input-group-addon {
+    background: #f8f9fa;
+    border: 0.05rem solid #caced7;
+    border-radius: 0.1rem;
+    line-height: 1rem;
+    padding: 0.35rem 0.4rem;
+    white-space: nowrap; }
+    .input-group .input-group-addon.addon-sm {
+      font-size: 0.7rem;
+      padding: 0.15rem 0.3rem; }
+    .input-group .input-group-addon.addon-lg {
+      font-size: 0.9rem;
+      padding: 0.45rem 0.6rem; }
+  .input-group .form-input,
+  .input-group .form-select {
+    flex: 1 1 auto; }
+  .input-group .input-group-btn {
+    z-index: 1; }
+  .input-group .form-input:first-child:not(:last-child),
+  .input-group .form-select:first-child:not(:last-child),
+  .input-group .input-group-addon:first-child:not(:last-child),
+  .input-group .input-group-btn:first-child:not(:last-child) {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0; }
+  .input-group .form-input:not(:first-child):not(:last-child),
+  .input-group .form-select:not(:first-child):not(:last-child),
+  .input-group .input-group-addon:not(:first-child):not(:last-child),
+  .input-group .input-group-btn:not(:first-child):not(:last-child) {
+    border-radius: 0;
+    margin-left: -0.05rem; }
+  .input-group .form-input:last-child:not(:first-child),
+  .input-group .form-select:last-child:not(:first-child),
+  .input-group .input-group-addon:last-child:not(:first-child),
+  .input-group .input-group-btn:last-child:not(:first-child) {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-left: -0.05rem; }
+  .input-group .form-input:focus,
+  .input-group .form-select:focus,
+  .input-group .input-group-addon:focus,
+  .input-group .input-group-btn:focus {
+    z-index: 2; }
+  .input-group .form-select {
+    width: auto; }
+  .input-group.input-inline {
+    display: inline-flex; }
+
+.has-success .form-input, .form-input.is-success, .has-success
+.form-select,
+.form-select.is-success {
+  border-color: #32b643; }
+  .has-success .form-input:focus, .form-input.is-success:focus, .has-success
+  .form-select:focus,
+  .form-select.is-success:focus {
+    box-shadow: 0 0 0 0.1rem rgba(50, 182, 67, 0.2); }
+
+.has-error .form-input, .form-input.is-error, .has-error
+.form-select,
+.form-select.is-error {
+  border-color: #e85600; }
+  .has-error .form-input:focus, .form-input.is-error:focus, .has-error
+  .form-select:focus,
+  .form-select.is-error:focus {
+    box-shadow: 0 0 0 0.1rem rgba(232, 86, 0, 0.2); }
+
+.has-error .form-checkbox .form-icon, .form-checkbox.is-error .form-icon, .has-error
+.form-radio .form-icon,
+.form-radio.is-error .form-icon, .has-error
+.form-switch .form-icon,
+.form-switch.is-error .form-icon {
+  border-color: #e85600; }
+
+.has-error .form-checkbox input:checked + .form-icon, .form-checkbox.is-error input:checked + .form-icon, .has-error
+.form-radio input:checked + .form-icon,
+.form-radio.is-error input:checked + .form-icon, .has-error
+.form-switch input:checked + .form-icon,
+.form-switch.is-error input:checked + .form-icon {
+  background: #e85600;
+  border-color: #e85600; }
+
+.has-error .form-checkbox input:focus + .form-icon, .form-checkbox.is-error input:focus + .form-icon, .has-error
+.form-radio input:focus + .form-icon,
+.form-radio.is-error input:focus + .form-icon, .has-error
+.form-switch input:focus + .form-icon,
+.form-switch.is-error input:focus + .form-icon {
+  box-shadow: 0 0 0 0.1rem rgba(232, 86, 0, 0.2);
+  border-color: #e85600; }
+
+.form-input:not(:placeholder-shown):invalid {
+  border-color: #e85600; }
+  .form-input:not(:placeholder-shown):invalid:focus {
+    box-shadow: 0 0 0 0.1rem rgba(232, 86, 0, 0.2); }
+  .form-input:not(:placeholder-shown):invalid + .form-input-hint {
+    color: #e85600; }
+
+.form-input:disabled, .form-input.disabled,
+.form-select:disabled,
+.form-select.disabled {
+  background-color: #f0f1f4;
+  cursor: not-allowed;
+  opacity: .5; }
+
+.form-input[readonly] {
+  background-color: #f8f9fa; }
+
+input:disabled + .form-icon, input.disabled + .form-icon {
+  background: #f0f1f4;
+  cursor: not-allowed;
+  opacity: .5; }
+
+.form-switch input:disabled + .form-icon::before, .form-switch input.disabled + .form-icon::before {
+  background: #fff; }
+
+.form-horizontal {
+  padding: 0.4rem 0; }
+  .form-horizontal .form-group {
+    display: flex;
+    flex-wrap: wrap; }
