--- a/src/Containers/HomePublic/style.css
+++ b/src/Containers/HomePublic/style.css
@@ -1,44 +1,21 @@
-html {
-	background: white;
-}
+section {
+  text-align: center;
+  overflow: hidden; }
 
-.section{
-  text-align:center;
-  overflow: hidden;
-}
-
-#section2 h1{
-  font-weight: 900;
-  font-size: 30em;
-  color: #FFF;
-  -webkit-text-shadow: 0 .3rem .9rem rgba(0,0,0,.4);
-  text-shadow: 0 0.3rem 0.9rem rgba(0,0,0,.4);
-  letter-spacing: -3px;
-}
-
-h2 {
-  	font-family: "brandon-grotesque",sans-serif;
-  	line-height: 1.25em;
-  	font-size: 1.15em;
-  	font-weight: bolder;
-  	margin: 0;
-  	text-transform: uppercase;
-}
 p, a {
-	font-family: "freight-text-pro",sans-serif;
-	font-size: 1em;
-	font-style: normal;
-	font-weight: 500;
-	letter-spacing: 1px;
-	line-height: 1.25em;
-	margin-bottom: 0;
-}
+  font-family: "freight-text-pro",sans-serif;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1.25em;
+  margin-bottom: 0; }
+
 .fp-tableCell {
   display: table-cell;
   vertical-align: middle;
-  width:100%;
-  height:100%
-}
+  width: 100%;
+  height: 100%; }
 
 .btn-main {
   border-radius: 4;
@@ -48,5 +25,17 @@ p, a {
   padding: '10px 12px';
   width: calc(100% - 24px);
   display: 'flex';
-  flex-wrap: 'wrap';
-}
+  flex-wrap: 'wrap'; }
+
+.backgroundOne {
+  background: url("../../Assets/bg8.svg"), url("../../Assets/bg4.svg"), url("../../Assets/bg2.svg") 40px;
+  background-position: right bottom, right top, bottom right;
+  background-repeat: no-repeat, no-repeat, repeat-x;
+  background-size: auto, auto, 60%; }
+
+.backgroundTwo {
+  background: url("../../Assets/bg9.svg");
+  background-position: bottom center;
+  background-repeat: repeat-x;
+  background-position-y: 250px;
+  background-size: 50%; }
