--- a/src/Containers/Forum/style.scss
+++ b/src/Containers/Forum/style.scss
@@ -12,7 +12,7 @@
 }
 
 .raised {
- box-shadow: 0px 10px 6px -6px #777;
- -webkit-box-shadow: 0px 10px 6px -6px rgba(0, 0, 0, 0.4);
- -moz-box-shadow: 0px 10px 6px -6px hsl(0,0,0, 0.4);
+ box-shadow: 0px 10px 6px -6px rgba(119, 119, 119, 0.8);
+ -webkit-box-shadow: 0px 10px 6px -6px rgba(119, 119, 119, 0.8);
+ -moz-box-shadow: 0px 10px 6px -6px rgba(119, 119, 119, 0.8);
 }
