--- a/src/Components/Layouts/MainLayout/Private/style.css
+++ b/src/Components/Layouts/MainLayout/Private/style.css
@@ -6,7 +6,7 @@
 
 .listItem li {
   display: inline-block;
-  margin-left: 5px;
   margin-right: 5px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px; }
+  align-self: flex-start;
+  border-radius: 10px;
+  -webkit-border-radius: 10px; }
