--- a/src/Containers/App/style.css
+++ b/src/Containers/App/style.css
@@ -8943,6 +8943,9 @@ iframe.uk-cover {
 button {
   border-radius: 67rem; }
 
+.bg-muted {
+  background-color: #e1eaf1; }
+
 .icon {
   box-sizing: border-box;
   display: inline-block;
