--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -37,6 +37,10 @@ button {
   background-color: #e1eaf1;
 }
 
+body {
+  background-color: #e1eaf1;
+}
+
 // Import only the needed components
 @import "spectre.css/src/_variables";
 @import "spectre.css/src/_icons";
