--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -4,7 +4,7 @@ $navbar-nav-item-active-color: #09d35d !default;
 $navbar-nav-item-color: #212121 !default;
 $navbar-nav-item-hover-color:  #09d35d !default;
 $navbar-nav-item-onclick-color: #09d35d !default;
-// $global-background: #c4e1e6 !default;
+// $global-background: #e4e6eb !default;
 $card-footer-padding-vertical-l: 1 !default;
 $card-small-footer-padding-vertical: 1 !default;
 $card-footer-padding-horizontal: 1 !default;
