--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -13,14 +13,14 @@ $navbar-background: #ffffff !default;
 $global-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Open Sans" Arial, sans-serif !default;
 
 // 2. Import default variables and available mixins.
-@import "uikit/src/scss/variables-theme.scss";
-@import "uikit/src/scss/mixins-theme.scss";
+@import "node_modules/uikit/src/scss/variables-theme.scss";
+@import "node_modules/uikit/src/scss/mixins-theme.scss";
 
 // 3. Your custom mixin overwrites.
 @mixin hook-card() { color: #000; }
 
 // 4. Import UIkit.
-@import "uikit/src/scss/uikit-theme.scss";
+@import "node_modules/uikit/src/scss/uikit-theme.scss";
 
 // SCSS rule
 .uk-card {
@@ -44,16 +44,16 @@ body {
 }
 
 // Import only the needed components
-@import "spectre.css/src/_variables";
-@import "spectre.css/src/_icons";
-@import "spectre.css/src/_mixins";
-@import "spectre.css/src/_parallax";
-@import "spectre.css/src/_utilities";
-@import "spectre.css/src/_panels";
-@import "spectre.css/src/_empty";
-@import "spectre.css/src/_menus";
-@import "spectre.css/src/_autocomplete";
-@import "spectre.css/src/_avatars";
-@import "spectre.css/src/_calendars";
-@import "spectre.css/src/_buttons";
-@import "spectre.css/src/_forms";
+@import "node_modules/spectre.css/src/_variables";
+@import "node_modules/spectre.css/src/_icons";
+@import "node_modules/spectre.css/src/_mixins";
+@import "node_modules/spectre.css/src/_parallax";
+@import "node_modules/spectre.css/src/_utilities";
+@import "node_modules/spectre.css/src/_panels";
+@import "node_modules/spectre.css/src/_empty";
+@import "node_modules/spectre.css/src/_menus";
+@import "node_modules/spectre.css/src/_autocomplete";
+@import "node_modules/spectre.css/src/_avatars";
+@import "node_modules/spectre.css/src/_calendars";
+@import "node_modules/spectre.css/src/_buttons";
+@import "node_modules/spectre.css/src/_forms";
