--- a/src/Components/Layouts/Header/Private/style.scss
+++ b/src/Components/Layouts/Header/Private/style.scss
@@ -1,13 +1,4 @@
 /*Style the DIV*/
-.person .box{
-  width: 100px;
-  float: left; 
-  margin: 2px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  text-align: center;
-}
-
 /*Fade all the DIV when user hovers on any div*/
 .person:hover .box{
   zoom: 1;
@@ -23,9 +14,8 @@
 /*Fade out the particular DIV when user hover on that DIV*/
 .person .box:hover{
   box-shadow: 3px 3px 15px #666;
-  border-color:#C76C0C;
-  background: #C76C0C;
-  color: #fff;
+  border-color:#fff;
+  background: #fff;
   cursor: pointer;
   
   /*Opacity*/
