--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -15,8 +15,6 @@ $global-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Hel
 // 2. Import default variables and available mixins.
 @import "node_modules/uikit/src/scss/variables-theme.scss";
 @import "node_modules/uikit/src/scss/mixins-theme.scss";
-@import "../../Theme/application.scss";
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
 
 // 3. Your custom mixin overwrites.
 @mixin hook-card() { color: #000; }
@@ -46,7 +44,7 @@ body {
 }
 
 // Import only the needed components
-/*
+
 @import "node_modules/spectre.css/src/_variables";
 @import "node_modules/spectre.css/src/_icons";
 @import "node_modules/spectre.css/src/_mixins";
@@ -60,7 +58,7 @@ body {
 @import "node_modules/spectre.css/src/_calendars";
 @import "node_modules/spectre.css/src/_buttons";
 @import "node_modules/spectre.css/src/_forms";
-*/
+/**/
 
 .rcorners {
     border-radius: 60px;
