--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -67,7 +67,8 @@ $primary-color: #09d35d !default;
 
 .rcorners {
     border-radius: 60px;
-    background: #73AD21;
+    background: #454d5d;
     padding: 2px;
-    box-shadow: #09d35d;
+    box-shadow: #454d5d;
+    border-color: #454d5d;
 }
