small set of changes

--- a/src/Components/Layouts/Header/Private/style.scss
+++ b/src/Components/Layouts/Header/Private/style.scss
@@ -27,3 +27,11 @@
 .bolder {
   font-weight: bold;
 }
+
+.round-avatar {
+  width:40px;
+    height:40px;
+    background-color:azure;
+    box-shadow:0px 0px 0px 30px black inset;
+    border-width: 5px;
+}
