--- a/src/Containers/App/style.scss
+++ b/src/Containers/App/style.scss
@@ -72,3 +72,7 @@ $primary-color: #09d35d !default;
     box-shadow: #454d5d;
     border-color: #454d5d;
 }
+
+a {
+  text-decoration: none !important;
+}
