--- a/src/Containers/HomePublic/style.scss
+++ b/src/Containers/HomePublic/style.scss
@@ -50,6 +50,10 @@ p, a {
   background-repeat: no-repeat;
   
   background-size: contain;
+  background: #141E30;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .backgroundTwo {
@@ -77,6 +81,10 @@ p, a {
 .number {
   font-size: 450px;
   color: #373c4c;
+}
+
+.white {
+  color: #fff;
 }
 
 .number span {
