--- a/src/Containers/HomePublic/style.scss
+++ b/src/Containers/HomePublic/style.scss
@@ -11,8 +11,8 @@
 
 .backgroundOne {
   background:
-    url('../../Assets/bgs/brain.svg');
-  background-position: center;
+    url('../../Assets/bgs/black_white.png');
+  background-position: top center left bottom;
   background-repeat: no-repeat;
   background-size: 100%;
 }
