--- a/src/Containers/HomePublic/style.scss
+++ b/src/Containers/HomePublic/style.scss
@@ -11,10 +11,11 @@
 
 .backgroundOne {
   background:
-    url('../../Assets/bgs/black_white.png');
-  background-position: top center left bottom;
-  background-repeat: no-repeat;
-  background-size: 100%;
+    url('../../Assets/bgs/black_white.png'),
+    url('../../Assets/bg4.svg'),;
+  background-position: top center left bottom, right top;
+  background-repeat: no-repeat, no-repeat;
+  background-size: inherit, auto;
 }
 
 .backgroundTwo {
