--- a/src/Containers/Forum/style.scss
+++ b/src/Containers/Forum/style.scss
@@ -1,7 +1,7 @@
 .input-box {
   background-color: ivory;
   bottom: 0;
-  width: 74vw;
+  width: inherit;
   position: absolute; 
   margin: auto;
 }
@@ -54,4 +54,14 @@
   -moz-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+}
+
+.un-community--box{
+  display: flex;
+  height: inherit;
+  width: inherit;
+}
+
+.un-chat-detail--box{
+  display: flex;
 }
