--- a/src/Containers/DirectChat/style.scss
+++ b/src/Containers/DirectChat/style.scss
@@ -1,8 +1,7 @@
 .input-box {
   background-color: ivory;
   bottom: 0;
-  display: flex;
-  width: inherit;
+  width: 74vw;
   position: absolute; 
   margin: auto;
 }
